fix modal style to look better on mobile

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -161,9 +161,12 @@ button:hover, .btn:hover {
   box-shadow: var(--shadow);
 }
 
+.add-coffee-title {
+  font-size: 1.5rem;
+}
+
 .modal-content input {
-  width: 50%;
-  font-size: 1rem;
+  width: 75%;
   display: block;
   margin: 1.25em auto;
   border: solid 1px var(--grey);
@@ -195,5 +198,12 @@ button:hover, .btn:hover {
   }
   button {
     font-size: 20px;
+  }
+  .add-coffee-title {
+    font-size: 1.953rem;
+  }
+  .modal-content input {
+    width: 50%;
+    font-size: 1rem;
   }
 }
